--- a/fe/netlify.toml
+++ b/fe/netlify.toml
@@ -1,2 +1,8 @@
 [build]
   functions = "api"
+  publish = "build"
+  command = "npm run build"
+[[redirects]]
+  from = "/*"
+  to = "index.html"
+  status = 200
