--- a/fe/package.json
+++ b/fe/package.json
@@ -20,6 +20,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage": "https://videobrain.netlify.app/",
   "eslintConfig": {
     "extends": [
       "react-app",
