--- a/fe/package.json
+++ b/fe/package.json
@@ -20,7 +20,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "homepage": ".",
+  "homepage": "https://videobrain.netlify.app",
   "eslintConfig": {
     "extends": [
       "react-app",
