--- a/netlify.toml
+++ b/netlify.toml
@@ -7,3 +7,7 @@
   from = "/*"
   to = "index.html"
   status = 200
+[[redirects]]
+  from     = "/api/*"
+  to       = "/.netlify/functions/:splat"
+  status   = 200
